Avoid pagebreak inside timeline moments

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -304,6 +304,10 @@ font-size: 80%;
 	width: 580pt;
 }
 
+.timeline .moment {
+	page-break-inside: avoid;
+}
+
 #forward.arrow{
 	left: 535pt;
 }
